# quantxpbacktester

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
launcher/: launch_MultiFactor_backtest.py
quantxpbacktester/: __init__.py  backtester.py  cli.py
quantxpbacktester/backtester/: Order.py  Ordertest.py  backtester.py
quantxpbacktester/data/: Alpaca.py  testAlpaca.py
quantxpbacktester/data/data_cache/: AAPL_1Min_2023-01-01_2023-01-31.parquet
quantxpbacktester/signals/: Cointegration.py  MultiFactorStrategy.py  MultiFactorStrategyTest.py  ValueCaptureStrategy.py  ValueCaptureStrategyTest.py
tests/: __init__.py  launcher_test.py  test_quantxpbacktester.py
